tests/single_instruction_translation_validation/mcsema/register-variants/phaddsw_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:219:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %24)
            ^
0.00user 0.02system 0:00.02elapsed 103%CPU (0avgtext+0avgdata 28120maxresident)k
0inputs+16outputs (0major+3273minor)pagefaults 0swaps
